--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 
     <head>
         <meta charset="UTF-8"  />
+        <link rel="stylesheet" href="style.css">
         <title>Run Buddy</title>
     </head>
 
     <body>
         <header>
-            <h1>RUN BUDDY</h1>
+            <h1>
+                <a href="/">RUN BUDDY</a>
+            </h1>
             <nav>
                 <ul>
                     <li>
