--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
                 <p>Fill out this form and one of our trainers will schedule a consult </p>
                 <form>
                     <label for="name">Enter full name:</label>
-                    <input type="text" placeholder="Your Name" name="name" id="name" />
+                    <input class="form-input" type="text" placeholder="Your Name" name="name" id="name" />
+                    
                     <label for="email">Enter email address:</label>
-                    <input type="email" placeholder="Email Address" name="email" id="email" />
+                    <input class="form-input" type="email" placeholder="Email Address" name="email" id="email" />
+                    
                     <label for="phone">Enter phone number:</label>
-                    <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
+                    <input class="form-input" type="tel" placeholder="Phone Number" name="phone" id="phone" />
                     <p>
                         Have you worked out with a trainer before?
                         <input type="radio" name="trainer-confirm" id="trainer-yes" />
@@ -54,7 +56,7 @@
                         </label>
                         <input type="checkbox" name="age-confirm" id="age-confirm" />
                     </p>
-                    <button type="submit">
+                    <button class="form-button" type="submit">
                         Get running!
                     </button>
                 </form>
