--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </section>
 
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>What We Do</h2>
             <p>
                 Holder text 
