Contact section styling

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             </article>
         </section>
 
-        <section id="reach-out">
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact" >
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.5325412622105!2d-81.38119808491916!3d28.553767182448933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77af6cea69c91%3A0x8c6fd4a4e3afb6bf!2sCamden%20North%20Quarter%20Apartments!5e0!3m2!1sen!2sus!4v1645556660964!5m2!1sen!2sus" 
                 width="400" 
@@ -160,6 +160,7 @@
                     </address>
                 </div>
             </div>
+
         </section>
 
         <footer>
