--- a/index.html
+++ b/index.html
@@ -70,15 +70,20 @@
         </section>
 
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
-            <p>
-                Holder text 
-            </p>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">What We Do</h2>
+            </div>
+            <div class="flex-row">
+                <p>
+                    butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+                </p>
+            </div>
         </section>
 
         <section id="what-you-do" class="steps" >
-            <h2 class="section-title secondary-border">What You Do</h2>
-
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">What You Do</h2>
+            </div>
             <div> 
                 <img src="assets/images/step-1.svg" alt="step-1-icon" />
                 <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -105,8 +110,10 @@
          
         </section>
 
-        <section class="trainers" id="your-trainers" >
-            <h2 class="section-title primary-border">Meet The Trainers</h2>
+        <section id="your-trainers" >
+            <div class="flex-row">
+                <h2 class="section-title primary-border">Meet The Trainers</h2>
+            </div>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio text-left">
@@ -141,7 +148,9 @@
         </section>
 
         <section id="reach-out" class="contact" >
-            <h2 class="section-title secondary-border">Reach Out</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">Reach Out</h2>
+            </div>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.5325412622105!2d-81.38119808491916!3d28.553767182448933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77af6cea69c91%3A0x8c6fd4a4e3afb6bf!2sCamden%20North%20Quarter%20Apartments!5e0!3m2!1sen!2sus!4v1645556660964!5m2!1sen!2sus" 
                 width="400" 
