--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </ul>
             </nav>
         </header>
-
+<!-- Hero section -->
         <section class="hero">
             <div class="hero-cta">
                 <h2>Start Building Habits.</h2>
@@ -79,12 +79,11 @@
                 </p>
             </div>
         </section>
-
+<!-- Steps section -->
         <section id="what-you-do" class="steps" >
             <div class="flex-row">
                 <h2 class="section-title secondary-border">What You Do</h2>
             </div>
-
             <div class="step">
                 <h3>Step 1.</h3> 
                 <div class="step-info">
@@ -97,8 +96,6 @@
                     </div>
                 </div>
             </div>
-
-
             <div class="step">
                 <h3>Step 2.</h3> 
                 <div class="step-info">
@@ -111,7 +108,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="step">
                 <h3>Step 3.</h3> 
                 <div class="step-info">
@@ -124,7 +120,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="step">
                 <h3>Step 4.</h3> 
                 <div class="step-info">
@@ -138,44 +133,47 @@
                 </div>
             </div>
         </section>
-
+<!-- Trainers section -->
         <section id="your-trainers" >
             <div class="flex-row">
                 <h2 class="section-title primary-border">Meet The Trainers</h2>
             </div>
-            <article class="trainer">
-                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                <div class="trainer-bio text-left">
-                    <h3>Arron Stephens</h3>
-                    <h4>Speed / Strength</h4>
-                    <p>
-                        Holder text2
-                    </p>
-                </div>
+            <div class="trainers">
+                <article class="trainer">
+                    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Arron Stephens</h3>
+                        <h4 class="trainer-role">Speed / Strength</h4>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                        </p>
+                    </div>
+                </article>
 
-            </article>
-            <article class="trainer">
-                <div class="trainer-bio text-right">
-                    <h3>Joanna Gill</h3>
-                    <h4>Endurance</h4>
-                    <p>
-                        Holder text3
-                    </p>
-                </div>
-                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-            </article>
-            <article class="trainer">
-                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-                <div class="trainer-bio text-left">
-                    <h3>Harry "the Headband" Smith</h3>
-                    <h4>Strength</h4>
-                    <p>
-                        Holder text4
-                    </p>
-                </div>
-            </article>
+                <article class="trainer">
+                    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Joanna Gill</h3>
+                        <h4 class="trainer-role">Endurance</h4>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                        </p>
+                    </div>
+                </article>
+
+                <article class="trainer">
+                    <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+                        <h4 class="trainer-role">Strength</h4>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                        </p>
+                    </div>
+                </article>
+            </div>
         </section>
-
+<!-- Contact section -->
         <section id="reach-out" class="contact" >
             <div class="flex-row">
                 <h2 class="section-title secondary-border">Reach Out</h2>
